# random_cursor_image

./: MANIFEST.in  README.md  pyproject.toml
random_cursor_image/: __init__.py  __main__.py  img_creator.py
