[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "random_cursor_image"
description = "generating random PNG images with randomly positioned cursors."
version = "0.0.1"
dependencies = [
    "pillow",
    "tqdm",
    'importlib-metadata; python_version>"3.10"',
]

[tool.setuptools]
include-package-data = true

[tool.poetry.data_files]
"my_project" = ["./img/image.png"]
